# CoinMarketCap-API

./: .gitignore  Main.py  README.md  database_creation.py  pyproject.toml  sample_settings.py  tasks.py
api/: celery.py  database_creation.py  tasks.py
